# k8sPulse

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
docs/: .html  README.md  _config.back  _config.yaml  _config.yml  docs.md  generate.sh  index.html  staging_statistics.html
k8spulse/: charts.py  cli.py  db.py  openai.py  openai_tools.py
k8spulse/detector/: deployments.py  resources.py  status.py  zombies.py
k8spulse/docs/: index.html  staging_statistics.html  staging_statistics_history.csv
k8spulse/templates/: index.html  report_template.html
